--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
   <div id="cursors"></div>
 
+  <a href="https://discord.gg/338D2xMufC" title="OpenMPP Discord" target="_blank">
+    <button class="discord-button icon-button top-button">
+      <img src="/discord.ico" style="vertical-align: middle;">
+    </button>
+  </a>
+  
   <a title="Multiplayer Piano Rules" target="_blank">
     <button class="mpp-rules-button top-button">
       No Rules!
