--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div id="cursors"></div>
 
-  <a href="https://discord.gg/338D2xMufC" title="OpenMPP Discord" target="_blank">
+  <a href="https://discord.gg/RjEttXpNbE" title="OpenMPP Discord" target="_blank">
     <button class="discord-button icon-button top-button">
       <img src="/discord.ico" style="vertical-align: middle;">
     </button>
