--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="cursors"></div>
 
   <a href="https://discord.gg/RjEttXpNbE" title="OpenMPP Discord" target="_blank">
-    <button class="discord-button icon-button top-button">
+    <button style="position: fixed; right: 6px; top: 5px; z-index: 200;" class="icon-button top-button">
       <img src="/discord.ico" style="vertical-align: middle;">
     </button>
   </a>
