--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </button>
   </a>
   
-  <a title="Multiplayer Piano Rules" target="_blank">
+  <a href="https://github.com/Hyye123/OpenMPP/blob/master/en_rules.md" title="OpenMPP Rules" target="_blank">
     <button class="mpp-rules-button top-button">
-      No Rules!
+      Rules
     </button>
   </a>
 
